# Messer-Bot

./: .gitignore  Example Storage.json  README.md  main.py  pyproject.toml  storage copy 2.json  test.py  testing.py
cogs/: suggest.py
