[tool.poetry]
name = "taco-bot-3000"
version = "0.1.0"
description = ""
authors = ["NickMesser <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
"discord.py" = "^1.7.1"
requests = "^2.25.1"
discord = "^1.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
